tests/baselines/reference/classConstructorOverloadsAccessibility.errors.txt
classConstructorOverloadsAccessibility.ts(2,2): error TS2385: Overload signatures must all be public, private or protected.
classConstructorOverloadsAccessibility.ts(3,2): error TS2385: Overload signatures must all be public, private or protected.
classConstructorOverloadsAccessibility.ts(11,2): error TS2385: Overload signatures must all be public, private or protected.


==== classConstructorOverloadsAccessibility.ts (3 errors) ====
    class A {
    	public constructor(a: boolean) // error
    	~~~~~~~~~~~~~~~~~~
!!! error TS2385: Overload signatures must all be public, private or protected.
    	protected constructor(a: number) // error
    	~~~~~~~~~~~~~~~~~~~~~
!!! error TS2385: Overload signatures must all be public, private or protected.
    	private constructor(a: string)
    	private constructor() { 
    		
    	}
    }
    
    class B {
    	protected constructor(a: number) // error
    	~~~~~~~~~~~~~~~~~~~~~
!!! error TS2385: Overload signatures must all be public, private or protected.
    	constructor(a: string)
    	constructor() { 
    		
    	}
    }
    
    class C {
    	protected constructor(a: number)
    	protected constructor(a: string)
    	protected constructor() { 
    		
    	}
    }
    
    class D {
    	constructor(a: number)
    	constructor(a: string)
    	public constructor() { 
    		
    	}
    }